--- a/Navigation/app/src/main/res/layout/activity_menu.xml
+++ b/Navigation/app/src/main/res/layout/activity_menu.xml
@@ -9,10 +9,13 @@
     android:weightSum="1">
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="372dp"
         android:layout_height="59dp"
         android:id="@+id/search"
-        android:hint="검색" />
+        android:hint="검색"
+        android:background="@null"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/magnifying2"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,30 +26,34 @@
     <Button
         android:id="@+id/button1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_weight="4"
-        android:text="즐겨찾기" />
+        android:background="@drawable/bookmarks"
+        android:text="" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_weight="4"
-        android:text="주변검색" />
+        android:background="@drawable/search"
+        android:text="" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_weight="4"
-        android:text="최근목적지" />
+        android:background="@drawable/recent"
+        android:text="" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_weight="4"
-        android:text="아이콘" />
+        android:background="@drawable/notice"
+        android:text="" />
     <Button
         android:id="@+id/button5"
         android:layout_width="0dp"
