--- a/Navigation/app/src/main/res/layout/activity_search.xml
+++ b/Navigation/app/src/main/res/layout/activity_search.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/search"
         android:hint="검색"
-        android:layout_weight="0.03" />
+        android:layout_weight="0.03"
+        android:background="@null"
+        android:layout_gravity="center" />
 
     <ListView
         android:layout_width="match_parent"
