--- a/Navigation/app/src/main/res/layout/activity_menu.xml
+++ b/Navigation/app/src/main/res/layout/activity_menu.xml
@@ -8,65 +8,68 @@
     tools:context="com.example.woga1.navigation.MenuActivity"
     android:weightSum="1">
 
-    <EditText
-        android:layout_width="372dp"
-        android:layout_height="59dp"
-        android:id="@+id/search"
-        android:hint="검색"
-        android:background="@null"
-        android:layout_gravity="center"
-        android:drawableLeft="@drawable/magnifying2"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.03"
+        android:layout_height="127dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/button1"
         android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_weight="4"
-        android:background="@drawable/bookmarks"
-        android:text="" />
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="60dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:background="@drawable/star"
+            android:text="" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_weight="4"
-        android:background="@drawable/search"
-        android:text="" />
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="60dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:background="@drawable/star"
+            android:text="" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_weight="4"
-        android:background="@drawable/recent"
-        android:text="" />
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="60dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:background="@drawable/star"
+            android:text="" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_weight="4"
-        android:background="@drawable/notice"
-        android:text="" />
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="" />
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="60dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:background="@drawable/star"
+            android:text="" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="60dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:background="@drawable/star"
+            android:text="" />
 
     </LinearLayout>
 
-    <GridView
+    <EditText
+        android:id="@+id/search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.03"
+        android:layout_height="59dp"
+        android:layout_gravity="center"
+        android:background="@drawable/searchbar"
+        android:hint="장소/주소"
+        android:paddingLeft="70dp" />
+
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:numColumns="3"/>
 
 </LinearLayout>
