--- a/Navigation/app/src/main/res/layout/activity_search.xml
+++ b/Navigation/app/src/main/res/layout/activity_search.xml
@@ -8,15 +8,55 @@
     tools:context="com.example.woga1.navigation.SearchActivity">
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/search"
-        android:hint="검색"
-        android:layout_weight="0.03"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
         android:background="@null"
-        android:layout_gravity="center" />
+        android:hint="검색" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="최근목적지"
+            android:background="#FFFFFFFF"/>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="즐겨찾기"
+            android:background="#FFFFFFFF"/>
+
+        <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="주소검색"
+            android:background="#FFFFFFFF"/>
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="지도지정"
+            android:background="#FFFFFFFF"/>
+
+    </LinearLayout>
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="449dp" />
+        android:layout_height="match_parent"
+        android:layout_weight="0.03"
+        android:background="#FFFFFFFF"/>
+
 </LinearLayout>
