Navigation Activity생성하고 bottom bar 생성 . 임시 앱 아이콘 로딩화면에 넣음. 이미지버튼에 들어갈 이미지 수정. 메뉴Activity와 다른 Activity와의 연결

--- a/Navigation/app/src/main/res/layout/activity_ready.xml
+++ b/Navigation/app/src/main/res/layout/activity_ready.xml
@@ -20,7 +20,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/anotherCourse"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1.00"
@@ -28,7 +28,7 @@
             android:text="다른경로" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/startNavigation"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"
