--- a/Navigation/app/src/main/res/layout/activity_menu.xml
+++ b/Navigation/app/src/main/res/layout/activity_menu.xml
@@ -10,53 +10,104 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="127dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/button1"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="60dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
             android:layout_weight="1"
-            android:background="@drawable/star"
+            android:background="@drawable/ic_star_border_black_24dp"
             android:text="" />
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="60dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
             android:layout_weight="1"
-            android:background="@drawable/star"
+            android:background="@drawable/ic_local_gas_station_black_24dp"
             android:text="" />
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="60dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
             android:layout_weight="1"
-            android:background="@drawable/star"
+            android:background="@drawable/ic_map_black_24dp"
             android:text="" />
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="60dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
             android:layout_weight="1"
-            android:background="@drawable/star"
+            android:background="@drawable/ic_directions_car_black_24dp"
             android:text="" />
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="60dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
             android:layout_weight="1"
-            android:background="@drawable/star"
+            android:background="@drawable/ic_notifications_black_24dp"
             android:text="" />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/button1"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="즐겨찾기"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="주변검색"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="최근목적지"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="차 아이콘"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="공지사항"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:layout_weight="1"/>
+    </LinearLayout>
     <EditText
         android:id="@+id/search"
         android:layout_width="match_parent"
