--- a/Navigation/app/src/main/res/layout/activity_map.xml
+++ b/Navigation/app/src/main/res/layout/activity_map.xml
@@ -2,10 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="19dp"
+        android:layout_marginEnd="30dp"
+        android:onClick="btnNow"
+        android:text="Button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
     <RelativeLayout
         android:id="@+id/map_view"
         android:layout_width ="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
     </RelativeLayout>
+
 
 </RelativeLayout>
