--- a/Navigation/app/src/main/res/layout/activity_menu.xml
+++ b/Navigation/app/src/main/res/layout/activity_menu.xml
@@ -10,48 +10,52 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/button1"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/ic_star_border_black_24dp"
             android:text="" />
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/ic_local_gas_station_black_24dp"
             android:text="" />
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/ic_map_black_24dp"
             android:text="" />
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/ic_directions_car_black_24dp"
             android:text="" />
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/ic_notifications_black_24dp"
             android:text="" />
 
@@ -67,51 +71,53 @@
             android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="즐겨찾기"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textColor="#000000"
-            android:layout_weight="1"/>
+            android:text="즐겨찾기"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="주변검색"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textColor="#000000"
-            android:layout_weight="1"/>
+            android:text="주변검색"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="최근목적지"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textColor="#000000"
-            android:layout_weight="1"/>
+            android:text="최근목적지"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="차 아이콘"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textColor="#000000"
-            android:layout_weight="1"/>
+            android:text="차 아이콘"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="공지사항"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textColor="#000000"
-            android:layout_weight="1"/>
+            android:text="공지사항"
+            android:textColor="#000000" />
     </LinearLayout>
+
+
     <EditText
         android:id="@+id/search"
         android:layout_width="match_parent"
-        android:layout_height="59dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:background="@drawable/searchbar"
         android:hint="장소/주소"
@@ -121,6 +127,6 @@
         android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:numColumns="3"/>
+        android:numColumns="3" />
 
 </LinearLayout>
