--- a/Navigation/app/src/main/res/layout/activity_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_navigation.xml
@@ -31,7 +31,7 @@
             android:id="@+id/imageButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="?attr/actionModeCloseDrawable"
+            android:background="@drawable/ic_refresh_black_24dp"
             android:layout_weight="0.05"
             />
 
@@ -57,8 +57,10 @@
             android:id="@+id/imageButton2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="?attr/actionModeCloseDrawable"
-            android:layout_weight="0.05"
+            android:background="@drawable/ic_power_settings_new_black_24dp"
+            android:onClick="showPopup"
             />
+
     </LinearLayout>
+
 </RelativeLayout>
