--- a/Navigation/app/src/main/res/layout/activity_favorite.xml
+++ b/Navigation/app/src/main/res/layout/activity_favorite.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context="com.example.woga1.navigation.FavoriteActivity">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
@@ -59,6 +61,12 @@
             android:layout_weight="1"
             android:background="@drawable/ic_check_black_24dp"/>
     </LinearLayout>
+
+    <ListView
+        android:id="@+id/listview1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
