--- a/Navigation/app/src/main/res/layout/activity_menu.xml
+++ b/Navigation/app/src/main/res/layout/activity_menu.xml
@@ -127,6 +127,9 @@
         android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:numColumns="3" />
+        android:layout_marginLeft="0dp"
+        android:paddingLeft="0dp"
+        android:numColumns="3" >
+    </GridView>
 
 </LinearLayout>
