--- a/Navigation/app/src/main/res/layout/activity_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_navigation.xml
@@ -7,16 +7,17 @@
     tools:context="com.example.woga1.navigation.NavigationActivity">
 
     <TextView
+        android:id="@+id/destination"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:layout_above="@+id/linearLayout"
+        android:layout_alignParentStart="true"
         android:layout_gravity="center"
-        android:gravity="center"
         android:background="#A6A6A6"
+        android:gravity="center"
         android:text="서울특별시 광진구 군자동"
         android:textColor="#000000"
-        android:textSize="20dp"
-        android:layout_above="@+id/linearLayout"
-        android:layout_alignParentStart="true" />
+        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
