--- a/Navigation/app/src/main/res/layout/custom_favoritebar.xml
+++ b/Navigation/app/src/main/res/layout/custom_favoritebar.xml
@@ -20,8 +20,18 @@
         android:gravity="center"
         android:text="즐겨찾기"
         android:textColor="#000000"
+        android:background="@null"
         android:textSize="20dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/editButton"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:background="@null"
+        android:text="편집"/>
 
 </RelativeLayout>
