--- a/Navigation/app/src/main/res/layout/activity_map.xml
+++ b/Navigation/app/src/main/res/layout/activity_map.xml
@@ -16,7 +16,7 @@
 
     <RelativeLayout
         android:id="@+id/map_view"
-        android:layout_width ="match_parent"
+        android:layout_width ="100dp"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
