--- a/Navigation/app/src/main/res/layout/activity_search2.xml
+++ b/Navigation/app/src/main/res/layout/activity_search2.xml
@@ -6,7 +6,8 @@
     <LinearLayout
         android:orientation="horizontal" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:layout_marginTop="50dp">
     <TextView
         android:id="@+id/textView"
         android:layout_width="125dp"
@@ -40,4 +41,15 @@
 
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="144dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.54"
+        android:layout_marginTop="120dp"
+        android:layout_marginLeft="200dp"
+        android:onClick="btnStart"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:text="경로안내 시작" />
 </LinearLayout>
