--- a/Navigation/app/src/main/res/layout/activity_map.xml
+++ b/Navigation/app/src/main/res/layout/activity_map.xml
@@ -15,12 +15,11 @@
         android:layout_alignParentEnd="true" />
 
     <RelativeLayout
-        android:id="@+id/map_view"
-        android:layout_width ="100dp"
+        android:id="@+id/mapview"
+        android:layout_width="100dp"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-    </RelativeLayout>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"></RelativeLayout>
 
 
 </RelativeLayout>
