--- a/Navigation/app/src/main/res/layout/activity_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_navigation.xml
@@ -4,20 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.woga1.navigation.NavigationActivity">
 
+    <RelativeLayout
+        android:id="@+id/mapview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/destination">
+
+    </RelativeLayout>
     <TextView
         android:id="@+id/destination"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_above="@+id/linearLayout"
-        android:layout_alignParentStart="true"
         android:layout_gravity="center"
         android:background="#A6A6A6"
         android:gravity="center"
         android:text="서울특별시 광진구 군자동"
         android:textColor="#000000"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:layout_above="@+id/linearLayout"
+        android:layout_toEndOf="@+id/mapview"
+        android:layout_alignParentStart="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
