--- a/Navigation/app/src/main/res/layout/activity_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_navigation.xml
@@ -13,7 +13,17 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/destination">
 
+        <Button
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="10dp"
+            android:background="@drawable/ic_my_location_black_24dp" />
+
     </RelativeLayout>
+
     <TextView
         android:id="@+id/destination"
         android:layout_width="match_parent"
@@ -72,5 +82,31 @@
             />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="89dp"
+        android:background="@drawable/ic_add_black_24dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignStart="@+id/button10"
+        android:layout_below="@+id/button10"
+        android:background="@null"
+        android:text="9" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignStart="@+id/button9"
+        android:layout_below="@+id/button9"
+        android:background="@drawable/ic_remove_black_24dp" />
 
 </RelativeLayout>
