--- a/Navigation/app/src/main/res/layout/activity_address_search.xml
+++ b/Navigation/app/src/main/res/layout/activity_address_search.xml
@@ -6,33 +6,41 @@
     android:layout_height="match_parent"
     tools:context="com.example.woga1.navigation.AddressSearchActivity">
 
-    <RelativeLayout
-        android:id="@+id/mapview"
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/listview">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@null"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
 
-        <EditText
-            android:id="@+id/search"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="14dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/searchbar"
-            android:hint="장소/주소"
-            android:paddingLeft="70dp" />
+    <!--<TextView-->
+        <!--android:id="@+id/txt_location"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_below="@+id/toolbar"-->
+        <!--android:text="TextView" />-->
 
-    </RelativeLayout>
+    <!--<TextView-->
+        <!--android:id="@+id/txt_attributions"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignEnd="@+id/txt_location"-->
+        <!--android:layout_below="@+id/txt_location"-->
+        <!--android:text="TextView" />-->
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
-
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_below="@+id/txt_attributions"-->
+        <!--android:layout_marginTop="13dp"-->
+        <!--android:clickable="true"-->
+        <!--app:fabSize="mini"-->
+        <!--app:srcCompat="@mipmap/circle" />-->
 </RelativeLayout>
