--- a/Navigation/app/src/main/res/layout/activity_search.xml
+++ b/Navigation/app/src/main/res/layout/activity_search.xml
@@ -7,6 +7,16 @@
     android:orientation="vertical"
     tools:context="com.example.woga1.navigation.SearchActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
+
     <EditText
         android:id="@+id/search"
         android:layout_width="match_parent"
