sharedPreference에 위도 경도 list 추가. 연동

--- a/Navigation/app/src/main/res/layout/custom_destinationbar.xml
+++ b/Navigation/app/src/main/res/layout/custom_destinationbar.xml
@@ -24,4 +24,13 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:id="@+id/editButton"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:background="@null"
+        android:text="편집" />
+
 </RelativeLayout>
