--- a/Navigation/app/src/main/res/layout/custom_grid_item.xml
+++ b/Navigation/app/src/main/res/layout/custom_grid_item.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@null">
 
     <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@null"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView_gridItem"
-            android:layout_width="150dp"
+            android:layout_width="200dp"
             android:layout_height="0dp"
             android:layout_weight="5"
+            android:scaleType="fitXY"
+            android:layout_marginLeft="0dp"
+            android:paddingLeft="0dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
             app:srcCompat="@drawable/star" />
 
         <TextView
             android:id="@+id/textView_gridItem"
-            android:layout_width="150dp"
+            android:layout_width="200dp"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:background="@null"
             android:gravity="center"
             android:text="즐겨찾기"
             android:textColor="#000000"
