블루투스 버튼 아이콘 추가, MEnuActivity 실행시 블루투스 실행. 앱 아이콘 , 스플래시 아이콘, 메뉴바 아이콘 변경

--- a/Navigation/app/src/main/res/layout/activity_loading.xml
+++ b/Navigation/app/src/main/res/layout/activity_loading.xml
@@ -11,10 +11,23 @@
         <!--android:text="로딩"-->
         <!--android:layout_gravity="center_horizontal"-->
         <!--android:textSize="30dp" />-->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="center"></LinearLayout>
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:id="@+id/imageView2"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:background="@drawable/good"
+        android:layout_gravity="center"/>
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:background="@mipmap/dsd" />
+        android:background="@drawable/handleartext" />
+
 </LinearLayout>
