--- a/Navigation/app/src/main/res/layout/custom_bar.xml
+++ b/Navigation/app/src/main/res/layout/custom_bar.xml
@@ -16,10 +16,10 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="0.04"
-        android:src="@mipmap/dsd"  />
+        android:src="@drawable/handleartext"  />
 
 </LinearLayout>
