네트워크, GPS 연결 안될시 앱 실행 안되게 만듬. ReadyActivity에서 거리에 따라 줌 변화.

--- a/Navigation/app/src/main/res/layout/activity_loading.xml
+++ b/Navigation/app/src/main/res/layout/activity_loading.xml
@@ -19,9 +19,9 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:background="@drawable/good"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:background="@drawable/uicon"
         android:layout_gravity="center"/>
     <ImageView
         android:id="@+id/imageView3"
