--- a/Navigation/app/src/main/res/layout/activity_loading.xml
+++ b/Navigation/app/src/main/res/layout/activity_loading.xml
@@ -21,7 +21,7 @@
         android:id="@+id/imageView2"
         android:layout_width="400dp"
         android:layout_height="400dp"
-        android:background="@drawable/uicon"
+        android:background="@drawable/handlearicon"
         android:layout_gravity="center"/>
     <ImageView
         android:id="@+id/imageView3"
