--- a/Navigation/app/src/main/res/layout/activity_ready.xml
+++ b/Navigation/app/src/main/res/layout/activity_ready.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.woga1.navigation.ReadyActivity"
-    android:weightSum="1">
+    android:weightSum="21">
 
 
     <RelativeLayout
         android:id="@+id/mapview"
         android:layout_width="match_parent"
-        android:layout_height="406dp">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/linearLayout2">
 
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="150dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout2">
 
         <Button
             android:id="@+id/anotherCourse"
@@ -39,4 +43,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
