--- a/Navigation/app/src/main/res/layout/activity_map.xml
+++ b/Navigation/app/src/main/res/layout/activity_map.xml
@@ -16,11 +16,19 @@
 
     <RelativeLayout
         android:id="@+id/map_view"
-        android:layout_width ="100dp"
+        android:layout_width ="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button"
+        android:text="TextView"
+        android:layout_alignBottom="@+id/button" />
 
 
 </RelativeLayout>
