--- a/Navigation/app/src/main/res/layout/activity_search.xml
+++ b/Navigation/app/src/main/res/layout/activity_search.xml
@@ -68,7 +68,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/listview1"
+        android:id="@+id/destinationListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
