--- a/Navigation/app/src/main/res/layout/activity_stop_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_stop_navigation.xml
@@ -56,6 +56,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/noButton"
             android:layout_width="0dp"
             android:layout_height="53dp"
             android:layout_weight="1"
@@ -66,7 +67,9 @@
             android:text="아니오"
             android:textColor="#000000"
             android:textSize="15sp" />
+
         <Button
+            android:id="@+id/finishButton"
             android:layout_width="0dp"
             android:layout_height="53dp"
             android:layout_weight="1"
