--- a/Navigation/app/src/main/res/layout/activity_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_navigation.xml
@@ -102,7 +102,8 @@
             android:layout_gravity="center"
             android:background="@drawable/ic_my_location_black_24dp"
             android:elevation="8dp"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:onClick="btnNowLocation"/>
 
     </FrameLayout>
 
@@ -130,7 +131,8 @@
             android:layout_gravity="center"
             android:background="@drawable/ic_remove_black_24dp"
             android:elevation="8dp"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:onClick="btnZoomOut"/>
     </FrameLayout>
 
     <FrameLayout
@@ -158,7 +160,8 @@
             android:layout_gravity="center"
             android:background="@drawable/ic_add_black_24dp"
             android:elevation="8dp"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:onClick="btnZoomIn"/>
     </FrameLayout>
 
 </RelativeLayout>
