현재위치 수정 - NETWORK_PROVIDER로 받음

--- a/Navigation/app/src/main/res/layout/activity_ready.xml
+++ b/Navigation/app/src/main/res/layout/activity_ready.xml
@@ -92,10 +92,12 @@
         android:textStyle="bold"
         android:textColor="#FF8880"/>
     <TextView
+        android:id="@+id/distance"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.4"/>
     <TextView
+        android:id="@+id/time"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.4"/>
