--- a/Navigation/app/src/main/res/layout/activity_navigation.xml
+++ b/Navigation/app/src/main/res/layout/activity_navigation.xml
@@ -49,6 +49,7 @@
             />
 
         <TextView
+            android:id="@+id/km"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -58,6 +59,7 @@
             android:textSize="25dp"
             android:layout_weight="1"/>
         <TextView
+            android:id="@+id/min"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
