Menu화면 그리드뷰 이미지를 텍스트로 전환

--- a/Navigation/app/src/main/res/layout/activity_menu.xml
+++ b/Navigation/app/src/main/res/layout/activity_menu.xml
@@ -20,7 +20,7 @@
             android:layout_height="70dp"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/ic_star_border_black_24dp"
+            android:background="@drawable/test4"
             android:text="" />
 
         <Button
@@ -29,7 +29,7 @@
             android:layout_height="70dp"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/ic_local_gas_station_black_24dp"
+            android:background="@drawable/test4"
             android:text="" />
 
         <Button
@@ -38,7 +38,7 @@
             android:layout_height="70dp"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/ic_map_black_24dp"
+            android:background="@drawable/test4"
             android:text="" />
 
         <Button
@@ -47,7 +47,7 @@
             android:layout_height="70dp"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/ic_bluetooth_black_24dp"
+            android:background="@drawable/test4"
             android:text="" />
 
         <Button
@@ -56,7 +56,7 @@
             android:layout_height="70dp"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/ic_notifications_black_24dp"
+            android:background="@drawable/test4"
             android:text="" />
 
     </LinearLayout>
@@ -129,16 +129,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="0dp"
-        android:paddingBottom="0dp"
-        android:background="#FFFFFF"
-        android:horizontalSpacing="0dp"
-        android:verticalSpacing="0dp"
+        android:background="#E4E4E4"
+        android:horizontalSpacing="1dp"
+        android:verticalSpacing="1dp"
         android:listSelector="@android:color/transparent"
         android:numColumns="3" >
     </GridView>
