--- a/Navigation/app/src/main/res/layout/custom_grid_item.xml
+++ b/Navigation/app/src/main/res/layout/custom_grid_item.xml
@@ -7,35 +7,36 @@
     android:background="@null">
 
     <LinearLayout
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="@null"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="#FFFFFF"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView_gridItem"
-            android:layout_width="200dp"
-            android:layout_height="0dp"
-            android:layout_weight="5"
-            android:scaleType="fitXY"
-            android:layout_marginLeft="0dp"
-            android:paddingLeft="0dp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_centerInParent="true"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/star" />
+        <!--<ImageView-->
+            <!--android:id="@+id/imageView_gridItem"-->
+            <!--android:layout_width="120dp"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="5"-->
+            <!--android:scaleType="fitXY"-->
+            <!--android:layout_marginLeft="0dp"-->
+            <!--android:paddingLeft="0dp"-->
+            <!--android:gravity="center"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:adjustViewBounds="true"-->
+            <!--app:srcCompat="@drawable/star" />-->
 
         <TextView
             android:id="@+id/textView_gridItem"
-            android:layout_width="200dp"
+            android:layout_width="120dp"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@null"
+            android:background="#FFFFFF"
             android:gravity="center"
             android:text="즐겨찾기"
             android:textColor="#000000"
-            android:textSize="15dp" />
+            android:textStyle="bold"
+            android:textSize="13dp" />
 
     </LinearLayout>
 
